[B]Version 1.1.44[/B]
utils - fix prefquality function
perverzija - Add progress indicators and fix quality select