@@ -23,28 +23,44 @@ from six.moves import urllib_parse
 from resources.lib import utils
 from resources.lib.adultsite import AdultSite
 
-site = AdultSite('thepornfull', '[COLOR hotpink]Thepornfull[/COLOR]', 'https://thepornfull.com/', 'https://thepornfull.com/wp-content/uploads/2021/08/Logo-Thepornfull.png', 'thepornfull')
+site = AdultSite('thepornfull', '[COLOR hotpink]Thepornfull[/COLOR]', 'https://thepornfull.com/', 'https://thepornfull.com/wp-content/uploads/2022/05/Logo-Thepornfull.png', 'thepornfull')
 
 
 @site.register(default_mode=True)
 def thepornfull_main():
-    site.add_dir('[COLOR hotpink]Categories[/COLOR]', site.url + 'categories/', 'Categories', site.img_cat)
+    site.add_dir('[COLOR hotpink]Categories[/COLOR]', site.url + 'categorias/', 'Categories', site.img_cat)
     site.add_dir('[COLOR hotpink]Search[/COLOR]', site.url + '?s=', 'thepornfull_search', site.img_search)
-    thepornfull_list(site.url + 'page/1/?filter=latest')
+    thepornfull_list(site.url + '?order=recent')
 
 
 @site.register()
 def thepornfull_list(url):
     listhtml = utils.getHtml(url, site.url)
-    match = re.compile('<article.*?href="([^"]+)" title="([^"]+).*?src="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    if 'No results</h2>' in listhtml:
+        utils.notify(msg='Nothing found')
+        utils.eod()
+        return
+
+    match = re.compile(r'class="video-thumb".*?href="([^"]+)"\s*title="([^"]+).*?src="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(listhtml)
     for video, name, img in match:
         name = utils.cleantext(name)
         site.add_download_link(name, video, 'thepornfull_play', img, name)
 
-    nextp = re.compile('next" href="([^"]+)"', re.DOTALL | re.IGNORECASE).search(listhtml)
-    if nextp:
-        site.add_dir('Next Page', nextp.group(1), 'thepornfull_list', site.img_next)
+    utils.next_page(site, 'thepornfull.thepornfull_list', listhtml, r'href="([^"]+)">Next<', r'page/(\d+)/[^>]*>Next<', re_lpnr=r'>(\d+)\D+class="next"', contextm='thepornfull.GotoPage')
     utils.eod()
+
+
+@site.register()
+def GotoPage(list_mode, url, np, lp):
+    dialog = xbmcgui.Dialog()
+    pg = dialog.numeric(0, 'Enter Page number')
+    if pg:
+        url = url.replace('/page/{}/'.format(np), '/page/{}/'.format(pg))
+        if int(lp) > 0 and int(pg) > int(lp):
+            utils.notify(msg='Out of range!')
+            return
+        contexturl = (utils.addon_sys + "?mode=" + str(list_mode) + "&url=" + urllib_parse.quote_plus(url))
+        xbmc.executebuiltin('Container.Update(' + contexturl + ')')
 
 
 @site.register()
@@ -60,7 +76,7 @@ def thepornfull_search(url, keyword=None):
 @site.register()
 def Categories(url):
     cathtml = utils.getHtml(url, site.url)
-    match = re.compile(r'<article id="post.+?a href="([^"]+)"\s*title="([^"]+)".+?src="([^"]+)"', re.DOTALL).findall(cathtml)
+    match = re.compile(r'class="titulo".+?href="([^"]+)".+?title="([^"]+)".+?src="([^"]+)"', re.DOTALL).findall(cathtml)
     for catpage, name, img in match:
         site.add_dir(name, catpage, 'thepornfull_list', img, '')
     if 'class="current">1<' in cathtml:
@@ -70,8 +86,8 @@ def Categories(url):
 
 @site.register()
 def thepornfull_play(url, name, download=None):
-    utils.kodilog(url)
     vp = utils.VideoPlayer(name, download=download)
+    vp.progress.update(25, "[CR]Loading video page[CR]")
     videohtml = utils.getHtml(url, site.url)
     match = re.compile('iframe src="([^"]+)"', re.IGNORECASE | re.DOTALL).search(videohtml)
     if match:
@@ -82,7 +98,6 @@ def thepornfull_play(url, name, download=None):
         if iframefile:
             videourl = iframefile.group(1)
             videourl = "{0}|{1}".format(videourl, urllib_parse.urlencode(headers))
-            utils.kodilog(videourl)
             iconimage = xbmc.getInfoImage("ListItem.Thumb")
             subject = xbmc.getInfoLabel("ListItem.Plot")
             listitem = xbmcgui.ListItem(name)
